--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-    "manifest-version": 2,
+    "manifest_version": 2,
     "name": "Image Remover", 
-    "version": "Pre-release-0.1",
-
-    "default_locale": "en", 
+    "version": "1.0",
     "description": "An extension that automatically removes all images from web pages.",
-
+    
     "content_scripts": [
         {
             "matches": ["<all_urls>"], 
